<resources>
    <string name="app_name">Giao Hàng</string>
    <string name="main">đơn hàng</string>
    <string name="username">UserName Or Password</string>
    <string name="password">......</string>
    <!-- map Api -->
    <string name="map_api_key">AIzaSyCpN31BRldLGjJ0cK69VoKlpE9kzjEkzWo</string>

    <!-- drawble -->
    <string name="thieudulieu">tên đăng nhập hoặc mật khẩu không đúng</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="statistical">thống kê đơn hàng</string>
    <string name="logout">Đăng Xuất</string>
    <string name="changinformation">thay đổi thông tin</string>
    <string name="home">Trang Chủ</string>
    <string name="title_activity_detail_bill">Map</string>
    <string name="login">LogIn</string>
    <string name="kG">0</string>
    <string name="sokg">10</string>
    <string name="SDT">số điện thoại</string>
    <string name="email">email</string>
    <string name="diachi">117/134/7 nguyễn hữu cảnh phường 22 quận bình thạnh</string>
    <string name="doimatkhau">Thay đổi mật khẩu</string>
    <string name="chuacohang">Hiện tại chưa có đơn hàng</string>
    <string name="xenbando">xem vị trí, đường đi</string>
    <string name="xemchitiet">chi tiết…</string>
    <string name="nhandonhang">nhận giao hàng</string>
    <string name="diachigiaohang">địa chỉ giao hàng </string>
    <string name="_17_000">17.000 đ</string>
    <string name="diachinhanhang">địa chỉ lấy gạo: </string>
    <string name="delay">chậm trễ</string>
    <string name="phut10">10 phút</string>
    <string name="phut15">15 phút</string>
    <string name="phut20">20 phút</string>
    <string name="phut30">30 phút</string>
    <string name="ketxe">bị kẹt xe</string>
    <string name="kothaydiachi">chưa tìm thấy địa chỉ</string>
    <string name="xehu">xe bị hư</string>
    <string name="bicagtbat">bị cảnh xát giao thông bắt</string>
    <string name="goi">gởi </string>
    <string name="huy">hủy</string>
    <string name="lydokhac">lý do khác</string>
    <string name="lydohuy">lý do hủy đơn hàng</string>
    <string name="khongthaydiachi">không tìm thấy địa chỉ</string>
    <string name="xebihu">xe hư không thể giao được</string>
    <string name="khachkhongnhan">khách không nhận hàng</string>
    <string name="dangtimduongdi">đang tìm đương đi…</string>
    <string name="tongKL">Tổng khối lượng:</string>
    <string name="danhmucgao">Danh mục loại gạo</string>
    <string name="idIvoice">jschbchsabcuhsvbhgucsagchj</string>
    <string name="tennguoinhan">Tên Người Nhận:</string>
    <string name="userName">Nguyễn văn A</string>
    <string name="DiaChi">Địa chỉ:</string>
    <string name="donhang">thông tin đơn hàng</string>
    <string name="xong">Xong</string>
    <string name="nguoigiaohangcung">Danh sách những người cùng giao hàng</string>
    <string name="thongtincuahang">Thông tin cửa hàng</string>
    <string name="thongke">Đang Thồng kê dữ liệu…</string>
    <string name="dangXL">đang sử lý…</string>

</resources>
