<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ExtraText">
    <group>
        <item
            android:id="@+id/trangchu"
            android:title="@string/home"
            android:visible="true" />

        <!--<item-->
            <!--android:id="@+id/thongkegiaohang"-->
            <!--android:title="@string/statistical"-->
            <!--android:visible="true" />-->
        <item
            android:id="@+id/thaydoithongtin"
            android:title="@string/changinformation"
            android:visible="true" />
        <item
            android:id="@+id/thongTinCuaHang"
            android:title="@string/thongtincuahang"
            android:visible="true" />
        />
        <item
            android:id="@+id/dangxuat"
            android:title="@string/logout"
            android:visible="true" />
        />

    </group>
</menu>