<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PopupDelay"
    android:orientation="vertical"
    android:background="@color/gray">

        <RadioGroup
            android:id="@+id/thoiGian"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <RadioButton
                android:id="@+id/phut10"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phut10"/>
            <RadioButton
                android:id="@+id/phut15"
                android:layout_marginStart="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phut15"/>
            <RadioButton
                android:id="@+id/phut20"
                android:layout_marginStart="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phut20"/>
            <RadioButton
                android:id="@+id/phut30"
                android:layout_marginStart="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phut30"/>
        </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimaryDark">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="5">
        <RadioGroup
            android:id="@+id/lyDoDelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <RadioButton
                android:id="@+id/ketxe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ketxe"/>
            <RadioButton
                android:id="@+id/kotimdiachi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kothaydiachi"/>
            <RadioButton
                android:id="@+id/xehu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/xehu"/>
            <RadioButton
                android:id="@+id/xebihbat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bicagtbat"/>
        </RadioGroup>

    </LinearLayout>
    <FrameLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/huyDelay"
            android:textColor="#006aff"
            android:textAllCaps="false"
            android:background="@color/gray"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/huy"/>
        <Button
            android:textColor="#006aff"
            android:id="@+id/goiThongBao"
            android:textAllCaps="false"
            android:background="@color/gray"
            android:layout_marginEnd="10dp"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/goi"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>
</LinearLayout>
