<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PopupCancelVoice"
    android:orientation="vertical"
    android:background="#f3fdf3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lydohuy"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorPrimaryDark">
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/groupCancelinvoice"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/kothayDC"
                android:text="@string/khongthaydiachi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/xeHu"
                android:text="@string/xebihu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/hangKoDcNhan"
                android:text="@string/khachkhongnhan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </RadioButton>
        </RadioGroup>

        <FrameLayout
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/huyCancel"
                android:textColor="#016fff"
                android:layout_gravity="end"
                android:layout_marginEnd="150dp"
                android:background="#f3fdf3"
                android:text="@string/huy"
                android:layout_width="wrap_content"
                android:layout_height="30dp" />
            <Button
                android:id="@+id/sendCancel"
                android:textColor="#0033ff"
                android:background="#f3fdf3"
                android:text="@string/goi"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="right"
                tools:ignore="RtlHardcoded" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>