<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9e9"
    tools:context=".view.DetaiVoiceUnpaid">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:padding="10dp"
        android:background="@drawable/bogoclinnerlayout"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="15sp"
                android:id="@+id/tennguoinhandetailRecieve"
                android:textColor="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iddonhangdetailRecieve"
            android:text="@string/idIvoice"
            android:layout_marginStart="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DiaChi"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/diachinguoinhandetailRecieve"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diachi"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tongKL"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/khoiluongdetailRecieve"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kG"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Số Tiền Nhận: "
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/sotiennhandetailRecieve"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="17.000 đ"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Số Điện Thoại: "
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp" />
            <TextView
                android:id="@+id/sodienthoaidetailRecieve"
                android:textColor="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0974995036 "
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#f2f4f9">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/danhmucgao"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>
        <ListView
            android:padding="5dp"
            android:focusable="false"
            android:divider="@color/gray"
            android:background="@color/white"
            android:dividerHeight="0dip"
            android:layout_width="match_parent"
            android:id="@+id/LvDetailRecieve"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
        />
    </LinearLayout>
    </ScrollView>
</LinearLayout>